# TechTrendWatcher

./: README.md  pyproject.toml
.github/workflows/: main.yml
src/techtrendwatcher/: main.py
src/techtrendwatcher/core/: config.py  exceptions.py  logger.py
src/techtrendwatcher/github/: client.py  processor.py
src/techtrendwatcher/models/: github.py
src/techtrendwatcher/notion/: client.py
src/techtrendwatcher/snowflake/: client.py
tests/: test_config.py  test_github_client.py  test_models.py  test_processor.py
