[project]
name = "techtrendwatcher"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.1",
    "notion-client>=3.0.0",
    "pandas>=3.0.1",
    "polars>=1.38.1",
    "pyarrow>=23.0.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "pygithub>=2.8.1",
    "pytest>=9.0.2",
    "python-dotenv>=1.2.2",
    "requests>=2.32.5",
    "snowflake-snowpark-python>=1.45.0",
    "tenacity>=9.1.4",
]

[tool.hatch.build.targets.wheel]
packages = ["src/techtrendwatcher"]

[project.scripts]
ttw = "techtrendwatcher.main:run"

[tool.uv]
package = true
